utar_interpreter/parser.output
   0  $accept : %entry% $end

   1  toplevel : EOF
   2           | Command SEMI toplevel

   3  Command : Term

   4  Term : AppTerm
   5       | IF Term THEN Term ELSE Term

   6  AppTerm : ATerm
   7          | SUCC ATerm
   8          | PRED ATerm
   9          | ISZERO ATerm
  10          | AND ATerm ATerm

  11  ATerm : LPAREN Term RPAREN
  12        | TRUE
  13        | FALSE
  14        | INTV

  15  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (15)

	IF  shift 3
	TRUE  shift 4
	FALSE  shift 5
	SUCC  shift 6
	PRED  shift 7
	ISZERO  shift 8
	AND  shift 9
	INTV  shift 10
	EOF  shift 11
	LPAREN  shift 12
	.  error

	toplevel  goto 13
	Command  goto 14
	Term  goto 15
	AppTerm  goto 16
	ATerm  goto 17


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	Term : IF . Term THEN Term ELSE Term  (5)

	IF  shift 3
	TRUE  shift 4
	FALSE  shift 5
	SUCC  shift 6
	PRED  shift 7
	ISZERO  shift 8
	AND  shift 9
	INTV  shift 10
	LPAREN  shift 12
	.  error

	Term  goto 18
	AppTerm  goto 16
	ATerm  goto 17


state 4
	ATerm : TRUE .  (12)

	.  reduce 12


state 5
	ATerm : FALSE .  (13)

	.  reduce 13


state 6
	AppTerm : SUCC . ATerm  (7)

	TRUE  shift 4
	FALSE  shift 5
	INTV  shift 10
	LPAREN  shift 12
	.  error

	ATerm  goto 19


state 7
	AppTerm : PRED . ATerm  (8)

	TRUE  shift 4
	FALSE  shift 5
	INTV  shift 10
	LPAREN  shift 12
	.  error

	ATerm  goto 20


state 8
	AppTerm : ISZERO . ATerm  (9)

	TRUE  shift 4
	FALSE  shift 5
	INTV  shift 10
	LPAREN  shift 12
	.  error

	ATerm  goto 21


state 9
	AppTerm : AND . ATerm ATerm  (10)

	TRUE  shift 4
	FALSE  shift 5
	INTV  shift 10
	LPAREN  shift 12
	.  error

	ATerm  goto 22


state 10
	ATerm : INTV .  (14)

	.  reduce 14


state 11
	toplevel : EOF .  (1)

	.  reduce 1


state 12
	ATerm : LPAREN . Term RPAREN  (11)

	IF  shift 3
	TRUE  shift 4
	FALSE  shift 5
	SUCC  shift 6
	PRED  shift 7
	ISZERO  shift 8
	AND  shift 9
	INTV  shift 10
	LPAREN  shift 12
	.  error

	Term  goto 23
	AppTerm  goto 16
	ATerm  goto 17


state 13
	%entry% : '\001' toplevel .  (15)

	.  reduce 15


state 14
	toplevel : Command . SEMI toplevel  (2)

	SEMI  shift 24
	.  error


state 15
	Command : Term .  (3)

	.  reduce 3


state 16
	Term : AppTerm .  (4)

	.  reduce 4


state 17
	AppTerm : ATerm .  (6)

	.  reduce 6


state 18
	Term : IF Term . THEN Term ELSE Term  (5)

	THEN  shift 25
	.  error


state 19
	AppTerm : SUCC ATerm .  (7)

	.  reduce 7


state 20
	AppTerm : PRED ATerm .  (8)

	.  reduce 8


state 21
	AppTerm : ISZERO ATerm .  (9)

	.  reduce 9


state 22
	AppTerm : AND ATerm . ATerm  (10)

	TRUE  shift 4
	FALSE  shift 5
	INTV  shift 10
	LPAREN  shift 12
	.  error

	ATerm  goto 26


state 23
	ATerm : LPAREN Term . RPAREN  (11)

	RPAREN  shift 27
	.  error


state 24
	toplevel : Command SEMI . toplevel  (2)

	IF  shift 3
	TRUE  shift 4
	FALSE  shift 5
	SUCC  shift 6
	PRED  shift 7
	ISZERO  shift 8
	AND  shift 9
	INTV  shift 10
	EOF  shift 11
	LPAREN  shift 12
	.  error

	toplevel  goto 28
	Command  goto 14
	Term  goto 15
	AppTerm  goto 16
	ATerm  goto 17


state 25
	Term : IF Term THEN . Term ELSE Term  (5)

	IF  shift 3
	TRUE  shift 4
	FALSE  shift 5
	SUCC  shift 6
	PRED  shift 7
	ISZERO  shift 8
	AND  shift 9
	INTV  shift 10
	LPAREN  shift 12
	.  error

	Term  goto 29
	AppTerm  goto 16
	ATerm  goto 17


state 26
	AppTerm : AND ATerm ATerm .  (10)

	.  reduce 10


state 27
	ATerm : LPAREN Term RPAREN .  (11)

	.  reduce 11


state 28
	toplevel : Command SEMI toplevel .  (2)

	.  reduce 2


state 29
	Term : IF Term THEN Term . ELSE Term  (5)

	ELSE  shift 30
	.  error


state 30
	Term : IF Term THEN Term ELSE . Term  (5)

	IF  shift 3
	TRUE  shift 4
	FALSE  shift 5
	SUCC  shift 6
	PRED  shift 7
	ISZERO  shift 8
	AND  shift 9
	INTV  shift 10
	LPAREN  shift 12
	.  error

	Term  goto 31
	AppTerm  goto 16
	ATerm  goto 17


state 31
	Term : IF Term THEN Term ELSE Term .  (5)

	.  reduce 5


54 terminals, 7 nonterminals
16 grammar rules, 32 states
